<package>
  <name>lib_ndt</name>
  <version>1.3.1</version>
  <description>The lib_ndt metapackage</description>
  <maintainer email="pharos@todo.todo">pharos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ndt_cpu</run_depend>
  <run_depend>ndt_gpu</run_depend>
  <run_depend>ndt_tku</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
